lowercase the log messages